@@ -69,7 +69,7 @@ public abstract class ArithmeticEngine {
      * value is 12.
      */
     public void setMinScale(int minScale) {
-        if(minScale < 0) {
+        if (minScale < 0) {
             throw new IllegalArgumentException("minScale < 0");
         }
         this.minScale = minScale;
@@ -80,7 +80,7 @@ public abstract class ArithmeticEngine {
      * Default value is 100.
      */
     public void setMaxScale(int maxScale) {
-        if(maxScale < minScale) {
+        if (maxScale < minScale) {
             throw new IllegalArgumentException("maxScale < minScale");
         }
         this.maxScale = maxScale;
@@ -94,8 +94,7 @@ public abstract class ArithmeticEngine {
             && roundingPolicy != BigDecimal.ROUND_HALF_EVEN
             && roundingPolicy != BigDecimal.ROUND_HALF_UP
             && roundingPolicy != BigDecimal.ROUND_UNNECESSARY
-            && roundingPolicy != BigDecimal.ROUND_UP) 
-        {
+            && roundingPolicy != BigDecimal.ROUND_UP) {
             throw new IllegalArgumentException("invalid rounding policy");        
         }
         
@@ -109,8 +108,8 @@ public abstract class ArithmeticEngine {
      */
     public static class BigDecimalEngine
     extends
-        ArithmeticEngine    
-    {
+        ArithmeticEngine {
+        @Override
         public int compareNumbers(Number first, Number second) {
             // We try to find the result based on the sign (+/-/0) first, because:
             // - It's much faster than converting to BigDecial, and comparing to 0 is the most common comparison.
@@ -128,18 +127,21 @@ public abstract class ArithmeticEngine {
             }
         }
     
+        @Override
         public Number add(Number first, Number second) {
             BigDecimal left = toBigDecimal(first);
             BigDecimal right = toBigDecimal(second);
             return left.add(right);
         }
     
+        @Override
         public Number subtract(Number first, Number second) {
             BigDecimal left = toBigDecimal(first);
             BigDecimal right = toBigDecimal(second);
             return left.subtract(right);
         }
     
+        @Override
         public Number multiply(Number first, Number second) {
             BigDecimal left = toBigDecimal(first);
             BigDecimal right = toBigDecimal(second);
@@ -150,18 +152,21 @@ public abstract class ArithmeticEngine {
             return result;
         }
     
+        @Override
         public Number divide(Number first, Number second) {
             BigDecimal left = toBigDecimal(first);
             BigDecimal right = toBigDecimal(second);
             return divide(left, right);
         }
     
+        @Override
         public Number modulus(Number first, Number second) {
             long left = first.longValue();
             long right = second.longValue();
-            return new Long(left % right);
+            return Long.valueOf(left % right);
         }
     
+        @Override
         public Number toNumber(String s) {
             return toBigDecimalOrDouble(s);
         }
@@ -203,6 +208,7 @@ public abstract class ArithmeticEngine {
         
         private static final Map classCodes = createClassCodesMap();
         
+        @Override
         public int compareNumbers(Number first, Number second) throws TemplateException {
             switch(getCommonClassCode(first, second)) {
                 case INTEGER: {
@@ -241,6 +247,7 @@ public abstract class ArithmeticEngine {
             throw new Error();
         }
     
+        @Override
         public Number add(Number first, Number second) throws TemplateException {
             switch(getCommonClassCode(first, second)) {
                 case INTEGER: {
@@ -249,8 +256,8 @@ public abstract class ArithmeticEngine {
                     int n = n1 + n2;
                     return
                         ((n ^ n1) < 0 && (n ^ n2) < 0) // overflow check
-                        ? (Number)new Long(((long)n1) + n2)
-                        : (Number)new Integer(n);
+                        ? Long.valueOf(((long) n1) + n2)
+                        : Integer.valueOf(n);
                 }
                 case LONG: {
                     long n1 = first.longValue();
@@ -258,14 +265,14 @@ public abstract class ArithmeticEngine {
                     long n = n1 + n2;
                     return
                         ((n ^ n1) < 0 && (n ^ n2) < 0) // overflow check
-                        ? (Number)toBigInteger(first).add(toBigInteger(second))
-                        : (Number)new Long(n);
+                        ? toBigInteger(first).add(toBigInteger(second))
+                        : Long.valueOf(n);
                 }
                 case FLOAT: {
-                    return new Float(first.floatValue() + second.floatValue());
+                    return Float.valueOf(first.floatValue() + second.floatValue());
                 }
                 case DOUBLE: {
-                    return new Double(first.doubleValue() + second.doubleValue());
+                    return Double.valueOf(first.doubleValue() + second.doubleValue());
                 }
                 case BIGINTEGER: {
                     BigInteger n1 = toBigInteger(first);
@@ -283,6 +290,7 @@ public abstract class ArithmeticEngine {
             throw new Error();
         }
     
+        @Override
         public Number subtract(Number first, Number second) throws TemplateException {
             switch(getCommonClassCode(first, second)) {
                 case INTEGER: {
@@ -291,8 +299,8 @@ public abstract class ArithmeticEngine {
                     int n = n1 - n2;
                     return
                         ((n ^ n1) < 0 && (n ^ ~n2) < 0) // overflow check
-                        ? (Number)new Long(((long)n1) - n2)
-                        : (Number)new Integer(n);
+                        ? (Number) Long.valueOf(((long) n1) - n2)
+                        : (Number) Integer.valueOf(n);
                 }
                 case LONG: {
                     long n1 = first.longValue();
@@ -300,14 +308,14 @@ public abstract class ArithmeticEngine {
                     long n = n1 - n2;
                     return
                         ((n ^ n1) < 0 && (n ^ ~n2) < 0) // overflow check
-                        ? (Number)toBigInteger(first).subtract(toBigInteger(second))
-                        : (Number)new Long(n);
+                        ? (Number) toBigInteger(first).subtract(toBigInteger(second))
+                        : (Number) Long.valueOf(n);
                 }
                 case FLOAT: {
-                    return new Float(first.floatValue() - second.floatValue());
+                    return Float.valueOf(first.floatValue() - second.floatValue());
                 }
                 case DOUBLE: {
-                    return new Double(first.doubleValue() - second.doubleValue());
+                    return Double.valueOf(first.doubleValue() - second.doubleValue());
                 }
                 case BIGINTEGER: {
                     BigInteger n1 = toBigInteger(first);
@@ -325,6 +333,7 @@ public abstract class ArithmeticEngine {
             throw new Error();
         }
     
+        @Override
         public Number multiply(Number first, Number second) throws TemplateException {
             switch(getCommonClassCode(first, second)) {
                 case INTEGER: {
@@ -332,24 +341,24 @@ public abstract class ArithmeticEngine {
                     int n2 = second.intValue();
                     int n = n1 * n2;
                     return
-                        n1== 0 || n/n1 == n2 // overflow check
-                        ? (Number)new Integer(n)
-                        : (Number)new Long(((long)n1) * n2);
+                        n1 == 0 || n / n1 == n2 // overflow check
+                        ? (Number) Integer.valueOf(n)
+                        : (Number) Long.valueOf(((long) n1) * n2);
                 }
                 case LONG: {
                     long n1 = first.longValue();
                     long n2 = second.longValue();
                     long n = n1 * n2;
                     return
-                        n1==0L || n / n1 == n2 // overflow check
-                        ? (Number)new Long(n)
-                        : (Number)toBigInteger(first).multiply(toBigInteger(second));
+                        n1 == 0L || n / n1 == n2 // overflow check
+                        ? (Number) Long.valueOf(n)
+                        : (Number) toBigInteger(first).multiply(toBigInteger(second));
                 }
                 case FLOAT: {
-                    return new Float(first.floatValue() * second.floatValue());
+                    return Float.valueOf(first.floatValue() * second.floatValue());
                 }
                 case DOUBLE: {
-                    return new Double(first.doubleValue() * second.doubleValue());
+                    return Double.valueOf(first.doubleValue() * second.doubleValue());
                 }
                 case BIGINTEGER: {
                     BigInteger n1 = toBigInteger(first);
@@ -368,38 +377,38 @@ public abstract class ArithmeticEngine {
             throw new Error();
         }
     
+        @Override
         public Number divide(Number first, Number second) throws TemplateException {
             switch(getCommonClassCode(first, second)) {
                 case INTEGER: {
                     int n1 = first.intValue();
                     int n2 = second.intValue();
                     if (n1 % n2 == 0) {
-                        return new Integer(n1/n2);
+                        return Integer.valueOf(n1 / n2);
                     }
-                    return new Double(((double)n1)/n2);
+                    return Double.valueOf(((double) n1) / n2);
                 }
                 case LONG: {
                     long n1 = first.longValue();
                     long n2 = second.longValue();
                     if (n1 % n2 == 0) {
-                        return new Long(n1/n2);
+                        return Long.valueOf(n1 / n2);
                     }
-                    return new Double(((double)n1)/n2);
+                    return Double.valueOf(((double) n1) / n2);
                 }
                 case FLOAT: {
-                    return new Float(first.floatValue() / second.floatValue());
+                    return Float.valueOf(first.floatValue() / second.floatValue());
                 }
                 case DOUBLE: {
-                    return new Double(first.doubleValue() / second.doubleValue());
+                    return Double.valueOf(first.doubleValue() / second.doubleValue());
                 }
                 case BIGINTEGER: {
                     BigInteger n1 = toBigInteger(first);
                     BigInteger n2 = toBigInteger(second);
                     BigInteger[] divmod = n1.divideAndRemainder(n2);
-                    if(divmod[1].equals(BigInteger.ZERO)) {
+                    if (divmod[1].equals(BigInteger.ZERO)) {
                         return divmod[0];
-                    }
-                    else {
+                    } else {
                         BigDecimal bd1 = new BigDecimal(n1);
                         BigDecimal bd2 = new BigDecimal(n2);
                         return bd1.divide(bd2, minScale, roundingPolicy);
@@ -420,19 +429,20 @@ public abstract class ArithmeticEngine {
             throw new Error();
         }
     
+        @Override
         public Number modulus(Number first, Number second) throws TemplateException {
             switch(getCommonClassCode(first, second)) {
                 case INTEGER: {
-                    return new Integer(first.intValue() % second.intValue());
+                    return Integer.valueOf(first.intValue() % second.intValue());
                 }
                 case LONG: {
-                    return new Long(first.longValue() % second.longValue());
+                    return Long.valueOf(first.longValue() % second.longValue());
                 }
                 case FLOAT: {
-                    return new Float(first.floatValue() % second.floatValue());
+                    return Float.valueOf(first.floatValue() % second.floatValue());
                 }
                 case DOUBLE: {
-                    return new Double(first.doubleValue() % second.doubleValue());
+                    return Double.valueOf(first.doubleValue() % second.doubleValue());
                 }
                 case BIGINTEGER: {
                     BigInteger n1 = toBigInteger(first);
@@ -445,9 +455,10 @@ public abstract class ArithmeticEngine {
             }
             // Make the compiler happy. getCommonClassCode() is guaranteed to 
             // return only above codes, or throw an exception.
-            throw new Error();
+            throw new BugException();
         }
     
+        @Override
         public Number toNumber(String s) {
             Number n = toBigDecimalOrDouble(s);
             return n instanceof BigDecimal ? OptimizerUtil.optimizeNumberRepresentation(n) : n;
@@ -455,28 +466,26 @@ public abstract class ArithmeticEngine {
         
         private static Map createClassCodesMap() {
             Map map = new HashMap(17);
-            Integer intcode = new Integer(INTEGER);
+            Integer intcode = Integer.valueOf(INTEGER);
             map.put(Byte.class, intcode);
             map.put(Short.class, intcode);
             map.put(Integer.class, intcode);
-            map.put(Long.class, new Integer(LONG));
-            map.put(Float.class, new Integer(FLOAT));
-            map.put(Double.class, new Integer(DOUBLE));
-            map.put(BigInteger.class, new Integer(BIGINTEGER));
-            map.put(BigDecimal.class, new Integer(BIGDECIMAL));
+            map.put(Long.class, Integer.valueOf(LONG));
+            map.put(Float.class, Integer.valueOf(FLOAT));
+            map.put(Double.class, Integer.valueOf(DOUBLE));
+            map.put(BigInteger.class, Integer.valueOf(BIGINTEGER));
+            map.put(BigDecimal.class, Integer.valueOf(BIGDECIMAL));
             return map;
         }
         
         private static int getClassCode(Number num) throws TemplateException {
             try {
-                return ((Integer)classCodes.get(num.getClass())).intValue();
-            }
-            catch(NullPointerException e) {
-                if(num == null) {
+                return ((Integer) classCodes.get(num.getClass())).intValue();
+            } catch (NullPointerException e) {
+                if (num == null) {
                     throw new _MiscTemplateException("The Number object was null.");
                 } else {
-                    throw new _MiscTemplateException(new Object[] {
-                            "Unknown number type ", num.getClass().getName() });
+                    throw new _MiscTemplateException("Unknown number type ", num.getClass().getName());
                 }
             }
         }
@@ -491,14 +500,14 @@ public abstract class ArithmeticEngine {
             // Double instead of Float to preserve the bigger bit width.
             switch(c) {
                 case FLOAT: {
-                    if((c1 < c2 ? c1 : c2) == LONG) {
+                    if ((c1 < c2 ? c1 : c2) == LONG) {
                         return DOUBLE;
                     }
                     break;
                 }
                 case BIGINTEGER: {
                     int min = c1 < c2 ? c1 : c2;
-                    if(min == DOUBLE || min == FLOAT) {
+                    if (min == DOUBLE || min == FLOAT) {
                         return BIGDECIMAL;
                     }
                     break;
@@ -525,11 +534,11 @@ public abstract class ArithmeticEngine {
         if (s.length() > 2) {
             char c = s.charAt(0);
             if (c == 'I' && (s.equals("INF") || s.equals("Infinity"))) {
-                return new Double(Double.POSITIVE_INFINITY);
+                return Double.valueOf(Double.POSITIVE_INFINITY);
             } else if (c == 'N' && s.equals("NaN")) {
-                return new Double(Double.NaN);
+                return Double.valueOf(Double.NaN);
             } else if (c == '-' && s.charAt(1) == 'I' && (s.equals("-INF") || s.equals("-Infinity"))) {
-                return new Double(Double.NEGATIVE_INFINITY);
+                return Double.valueOf(Double.NEGATIVE_INFINITY);
             }
         }
         return new BigDecimal(s);
