@@ -18,8 +18,8 @@ package freemarker.core;
 
 import freemarker.template.TemplateException;
 import freemarker.template.TemplateModel;
+import freemarker.template.TemplateNumberModel;
 import freemarker.template.TemplateScalarModel;
-import freemarker.template.utility.StringUtil;
 
 /**
  * An instruction that makes a single assignment, like [#local x=1].
@@ -28,35 +28,93 @@ import freemarker.template.utility.StringUtil;
  */
 final class Assignment extends TemplateElement {
 
-    private String variableName;
-    private Expression value, namespaceExp;
-    private int/*enum*/ scope;
+    // These must not clash with ArithmeticExpression.TYPE_... constants: 
+    private static final int OPERATOR_TYPE_EQUALS = 0x10000;
+    private static final int OPERATOR_TYPE_PLUS_EQUALS = 0x10001;
+    private static final int OPERATOR_TYPE_PLUS_PLUS = 0x10002;
+    private static final int OPERATOR_TYPE_MINUS_MINUS = 0x10003;
+    
+    private final int/*enum*/ scope;
+    private final String variableName;
+    private final int operatorType;
+    private final Expression valueExp;
+    private Expression namespaceExp;
 
     static final int NAMESPACE = 1;
     static final int LOCAL = 2;
     static final int GLOBAL = 3;
+    
+    private static final Number ONE = Integer.valueOf(1);
 
     /**
      * @param variableName the variable name to assign to.
-     * @param value the expression to assign.
+     * @param valueExp the expression to assign.
      * @param scope the scope of the assignment, one of NAMESPACE, LOCAL, or GLOBAL
      */
-    Assignment(String variableName, 
-               Expression value, 
-               int scope)
-    {
-        this.variableName = variableName;
-        this.value = value;
+    Assignment(String variableName,
+            int operator,
+            Expression valueExp,
+            int scope) {
         this.scope = scope;
+        
+        this.variableName = variableName;
+        
+        if (operator == FMParserConstants.EQUALS) {
+            operatorType = OPERATOR_TYPE_EQUALS;
+        } else {
+            switch (operator) {
+            case FMParserConstants.PLUS_PLUS:
+                operatorType = OPERATOR_TYPE_PLUS_PLUS;
+                break;
+            case FMParserConstants.MINUS_MINUS:
+                operatorType = OPERATOR_TYPE_MINUS_MINUS;
+                break;
+            case FMParserConstants.PLUS_EQUALS:
+                operatorType = OPERATOR_TYPE_PLUS_EQUALS;
+                break;
+            case FMParserConstants.MINUS_EQUALS:
+                operatorType = ArithmeticExpression.TYPE_SUBSTRACTION;
+                break;
+            case FMParserConstants.TIMES_EQUALS:
+                operatorType = ArithmeticExpression.TYPE_MULTIPLICATION;
+                break;
+            case FMParserConstants.DIV_EQUALS:
+                operatorType = ArithmeticExpression.TYPE_DIVISION;
+                break;
+            case FMParserConstants.MOD_EQUALS:
+                operatorType = ArithmeticExpression.TYPE_MODULO;
+                break;
+            default:
+                throw new BugException();
+            }
+        }
+        
+        this.valueExp = valueExp;
     }
     
     void setNamespaceExp(Expression namespaceExp) {
+        if (scope != NAMESPACE && namespaceExp != null) throw new BugException();
         this.namespaceExp =  namespaceExp;
     }
 
+    @Override
     void accept(Environment env) throws TemplateException {
-        Environment.Namespace namespace = null;
-        if (namespaceExp != null) {
+        final Environment.Namespace namespace;
+        if (namespaceExp == null) {
+            switch (scope) {
+            case LOCAL:
+                namespace = null;
+                break;
+            case GLOBAL:
+                namespace = env.getGlobalNamespace();
+                break;
+            case NAMESPACE:
+                namespace = env.getCurrentNamespace();
+                break;
+            default:
+                throw new BugException("Unexpected scope type: " + scope);
+            }
+        } else {
             TemplateModel namespaceTM = namespaceExp.eval(env);
             try {
                 namespace = (Environment.Namespace) namespaceTM;
@@ -68,65 +126,92 @@ final class Assignment extends TemplateElement {
             }
         }
         
-        TemplateModel tm = value.eval(env);
-        if (tm == null) {
-            if (env.isClassicCompatible()) {
-                tm = TemplateScalarModel.EMPTY_STRING;
+        TemplateModel value;
+        if (operatorType == OPERATOR_TYPE_EQUALS) {
+            value = valueExp.eval(env);
+            if (value == null) {
+                if (env.isClassicCompatible()) {
+                    value = TemplateScalarModel.EMPTY_STRING;
+                } else {
+                    throw InvalidReferenceException.getInstance(valueExp, env);
+                }
             }
-            else {
-                throw InvalidReferenceException.getInstance(value, env);
-            }
-        }
-        if (scope == LOCAL) {
-            env.setLocalVariable(variableName, tm);
-        }
-        else {
+        } else {
+            TemplateModel lhoValue;
             if (namespace == null) {
-                if (scope == GLOBAL) {
-                    namespace = env.getGlobalNamespace();
+                lhoValue = env.getLocalVariable(variableName);
+            } else {
+                lhoValue = namespace.get(variableName);
+            }
+            
+            if (operatorType == OPERATOR_TYPE_PLUS_EQUALS) {  // Add or concat operation
+                if (lhoValue == null) {
+                    if (env.isClassicCompatible()) {
+                        lhoValue = TemplateScalarModel.EMPTY_STRING;
+                    } else {
+                        throw InvalidReferenceException.getInstance(
+                                variableName, getOperatorTypeAsString(), env);
+                    }
                 }
-                else if (scope == NAMESPACE) {
-                    namespace = env.getCurrentNamespace();
+                
+                value = valueExp.eval(env);
+                if (value == null) {
+                    if (env.isClassicCompatible()) {
+                        value = TemplateScalarModel.EMPTY_STRING;
+                    } else {
+                        throw InvalidReferenceException.getInstance(valueExp, env);
+                    }
                 }
-                else {
-                    throw new BugException("Unexpected scope type: " + scope);
+                value = AddConcatExpression._eval(env, namespaceExp, null, lhoValue, valueExp, value);
+            } else {  // Numerical operation
+                Number lhoNumber;
+                if (lhoValue instanceof TemplateNumberModel) {
+                    lhoNumber = EvalUtil.modelToNumber((TemplateNumberModel) lhoValue, null);
+                } else if (lhoValue == null) {
+                    throw InvalidReferenceException.getInstance(variableName, getOperatorTypeAsString(), env);
+                } else {
+                    throw new NonNumericalException(variableName, lhoValue, null, env);
+                }
+
+                if (operatorType == OPERATOR_TYPE_PLUS_PLUS) {
+                    value  = AddConcatExpression._evalOnNumbers(env, getParentElement(), lhoNumber, ONE);
+                } else if (operatorType == OPERATOR_TYPE_MINUS_MINUS) {
+                    value = ArithmeticExpression._eval(
+                            env, getParentElement(), lhoNumber, ArithmeticExpression.TYPE_SUBSTRACTION, ONE);
+                } else { // operatorType == ArithmeticExpression.TYPE_...
+                    Number rhoNumber = valueExp.evalToNumber(env);
+                    value = ArithmeticExpression._eval(env, this, lhoNumber, operatorType, rhoNumber);
                 }
             }
-            namespace.put(variableName, tm);
+        }
+        
+        if (namespace == null) {
+            env.setLocalVariable(variableName, value);
+        } else {
+            namespace.put(variableName, value);
         }
     }
 
+    @Override
     protected String dump(boolean canonical) {
-        StringBuffer buf = new StringBuffer();
-        String dn = parent instanceof AssignmentInstruction ? null : getNodeTypeSymbol();
+        StringBuilder buf = new StringBuilder();
+        String dn = getParentElement() instanceof AssignmentInstruction ? null : getNodeTypeSymbol();
         if (dn != null) {
             if (canonical) buf.append("<");
             buf.append(dn);
             buf.append(' ');
         }
         
-        final boolean mustBeQuoted;
-        if (variableName.length() > 0) {
-            if (Character.isJavaIdentifierStart(variableName.charAt(0))) {
-                int i = 1;
-                while (i < variableName.length() && Character.isJavaIdentifierPart(variableName.charAt(i))) i++;
-                mustBeQuoted = i < variableName.length();
-            } else {
-                mustBeQuoted = true;
-            }
-        } else {
-            mustBeQuoted = true;
-        }
-        if (mustBeQuoted) {
-            buf.append('"');
-            buf.append(StringUtil.FTLStringLiteralEnc(variableName));
-            buf.append('"');
-        } else {
-            buf.append (variableName);
-        }
+        buf.append(_CoreStringUtils.toFTLTopLevelTragetIdentifier(variableName));
         
-        buf.append(" = ");
-        buf.append(value.getCanonicalForm());
+        if (valueExp != null) {
+            buf.append(' ');
+        }
+        buf.append(getOperatorTypeAsString());
+        if (valueExp != null) {
+            buf.append(' ');
+            buf.append(valueExp.getCanonicalForm());
+        }
         if (dn != null) {
             if (namespaceExp != null) {
                 buf.append(" in ");
@@ -138,6 +223,7 @@ final class Assignment extends TemplateElement {
         return result;
     }
     
+    @Override
     String getNodeTypeSymbol() {
         return getDirectiveName(scope);
     }
@@ -154,27 +240,51 @@ final class Assignment extends TemplateElement {
         }
     }
     
+    @Override
     int getParameterCount() {
-        return 4;
+        return 5;
     }
 
+    @Override
     Object getParameterValue(int idx) {
         switch (idx) {
         case 0: return variableName;
-        case 1: return value;
-        case 2: return new Integer(scope);
-        case 3: return namespaceExp;
+        case 1: return getOperatorTypeAsString();
+        case 2: return valueExp;
+        case 3: return Integer.valueOf(scope);
+        case 4: return namespaceExp;
         default: throw new IndexOutOfBoundsException();
         }
     }
 
+    @Override
     ParameterRole getParameterRole(int idx) {
         switch (idx) {
         case 0: return ParameterRole.ASSIGNMENT_TARGET;
-        case 1: return ParameterRole.ASSIGNMENT_SOURCE;
-        case 2: return ParameterRole.VARIABLE_SCOPE;
-        case 3: return ParameterRole.NAMESPACE;
+        case 1: return ParameterRole.ASSIGNMENT_OPERATOR;
+        case 2: return ParameterRole.ASSIGNMENT_SOURCE;
+        case 3: return ParameterRole.VARIABLE_SCOPE;
+        case 4: return ParameterRole.NAMESPACE;
         default: throw new IndexOutOfBoundsException();
+        }
+    }
+
+    @Override
+    boolean isNestedBlockRepeater() {
+        return false;
+    }
+    
+    private String getOperatorTypeAsString() {
+        if (operatorType == OPERATOR_TYPE_EQUALS) {
+            return "=";
+        } else if (operatorType == OPERATOR_TYPE_PLUS_EQUALS) {
+            return "+=";
+        } else if (operatorType == OPERATOR_TYPE_PLUS_PLUS) {
+            return "++";
+        } else if (operatorType == OPERATOR_TYPE_MINUS_MINUS) {
+            return "--";
+        } else {
+            return ArithmeticExpression.getOperatorSymbol(operatorType) + "=";
         }
     }
     
