@@ -17,46 +17,51 @@
 package freemarker.core;
 
 import java.io.IOException;
+import java.io.Writer;
 import java.text.NumberFormat;
 import java.util.Locale;
 
 import freemarker.template.TemplateException;
+import freemarker.template.utility.StringUtil;
 
 /**
  * An instruction that outputs the value of a numerical expression.
  */
-final class NumericalOutput extends TemplateElement {
+final class NumericalOutput extends Interpolation {
 
     private final Expression expression;
     private final boolean hasFormat;
     private final int minFracDigits;
     private final int maxFracDigits;
+    /** For OutputFormat-based auto-escaping */
+    private final MarkupOutputFormat autoEscapeOutputFormat;
     private volatile FormatHolder formatCache; // creating new NumberFormat is slow operation
 
-    NumericalOutput(Expression expression) {
+    NumericalOutput(Expression expression, MarkupOutputFormat autoEscapeOutputFormat) {
         this.expression = expression;
         hasFormat = false;
         this.minFracDigits = 0;
         this.maxFracDigits = 0;
+        this.autoEscapeOutputFormat = autoEscapeOutputFormat;
     }
 
     NumericalOutput(Expression expression,
-                    int minFracDigits,
-                    int maxFracDigits) 
-    {
+            int minFracDigits, int maxFracDigits,
+            MarkupOutputFormat autoEscapeOutputFormat) {
         this.expression = expression;
         hasFormat = true;
         this.minFracDigits = minFracDigits;
         this.maxFracDigits = maxFracDigits;
+        this.autoEscapeOutputFormat = autoEscapeOutputFormat;
     }
 
-    void accept(Environment env) throws TemplateException, IOException 
-    {
+    @Override
+    void accept(Environment env) throws TemplateException, IOException {
         Number num = expression.evalToNumber(env);
         
         FormatHolder fmth = formatCache;  // atomic sampling
         if (fmth == null || !fmth.locale.equals(env.getLocale())) {
-            synchronized(this) {
+            synchronized (this) {
                 fmth = formatCache;
                 if (fmth == null || !fmth.locale.equals(env.getLocale())) {
                     NumberFormat fmt = NumberFormat.getNumberInstance(env.getLocale());
@@ -76,12 +81,20 @@ final class NumericalOutput extends TemplateElement {
         // We must use Format even if hasFormat == false.
         // Some locales may use non-Arabic digits, thus replacing the
         // decimal separator in the result of toString() is not enough.
-        env.getOut().write(fmth.format.format(num));
+        String s = fmth.format.format(num);
+        Writer out = env.getOut();
+        if (autoEscapeOutputFormat != null) {
+            autoEscapeOutputFormat.output(s, out);
+        } else {
+            out.write(s);
+        }
     }
 
-    protected String dump(boolean canonical) {
-        StringBuffer buf = new StringBuffer("#{");
-        buf.append(expression.getCanonicalForm());
+    @Override
+    protected String dump(boolean canonical, boolean inStringLiteral) {
+        StringBuilder buf = new StringBuilder("#{");
+        final String exprCF = expression.getCanonicalForm();
+        buf.append(inStringLiteral ? StringUtil.FTLStringLiteralEnc(exprCF, '"') : exprCF);
         if (hasFormat) {
             buf.append(" ; ");
             buf.append("m");
@@ -93,14 +106,17 @@ final class NumericalOutput extends TemplateElement {
         return buf.toString();
     }
     
+    @Override
     String getNodeTypeSymbol() {
         return "#{...}";
     }
 
+    @Override
     boolean heedsOpeningWhitespace() {
         return true;
     }
 
+    @Override
     boolean heedsTrailingWhitespace() {
         return true;
     }
@@ -115,19 +131,22 @@ final class NumericalOutput extends TemplateElement {
         }
     }
 
+    @Override
     int getParameterCount() {
         return 3;
     }
 
+    @Override
     Object getParameterValue(int idx) {
         switch (idx) {
         case 0: return expression;
-        case 1: return new Integer(minFracDigits);
-        case 2: return new Integer(maxFracDigits);
+        case 1: return Integer.valueOf(minFracDigits);
+        case 2: return Integer.valueOf(maxFracDigits);
         default: throw new IndexOutOfBoundsException();
         }
     }
 
+    @Override
     ParameterRole getParameterRole(int idx) {
         switch (idx) {
         case 0: return ParameterRole.CONTENT;
@@ -135,5 +154,10 @@ final class NumericalOutput extends TemplateElement {
         case 2: return ParameterRole.MAXIMUM_DECIMALS;
         default: throw new IndexOutOfBoundsException();
         }
+    }
+
+    @Override
+    boolean isNestedBlockRepeater() {
+        return false;
     }
 }
