@@ -35,10 +35,9 @@ abstract class RangeModel implements TemplateSequenceModel, java.io.Serializable
     
     final public TemplateModel get(int index) throws TemplateModelException {
         if (index < 0 || index >= size()) {
-            throw new _TemplateModelException(new Object[] {
-                    "Range item index ", new Integer(index), " is out of bounds." });
+            throw new _TemplateModelException("Range item index ", Integer.valueOf(index), " is out of bounds.");
         }
-        long value = (long) begin + getStep() * index;
+        long value = begin + getStep() * (long) index;
         return value <= Integer.MAX_VALUE ? new SimpleNumber((int) value) : new SimpleNumber(value);
     }
     
