@@ -34,18 +34,21 @@ final class TrimInstruction extends TemplateElement {
         this.right = right;
     }
 
+    @Override
     void accept(Environment env) {
         // This instruction does nothing at render-time, only parse-time.
     }
 
+    @Override
     protected String dump(boolean canonical) {
-        StringBuffer sb = new StringBuffer();
+        StringBuilder sb = new StringBuilder();
         if (canonical) sb.append('<');
         sb.append(getNodeTypeSymbol());
         if (canonical) sb.append("/>");
         return sb.toString();
     }
     
+    @Override
     String getNodeTypeSymbol() {
         if (left && right) {
             return "#t";
@@ -58,14 +61,17 @@ final class TrimInstruction extends TemplateElement {
         }
     }
     
+    @Override
     boolean isIgnorable() {
         return true;
     }
 
+    @Override
     int getParameterCount() {
         return 1;
     }
 
+    @Override
     Object getParameterValue(int idx) {
         if (idx != 0) throw new IndexOutOfBoundsException();
         int type;
@@ -78,12 +84,23 @@ final class TrimInstruction extends TemplateElement {
         } else {
             type = TYPE_NT;
         }
-        return new Integer(type);
+        return Integer.valueOf(type);
     }
 
+    @Override
     ParameterRole getParameterRole(int idx) {
         if (idx != 0) throw new IndexOutOfBoundsException();
         return ParameterRole.AST_NODE_SUBTYPE;
+    }
+
+    @Override
+    boolean isOutputCacheable() {
+        return true;
+    }
+
+    @Override
+    boolean isNestedBlockRepeater() {
+        return false;
     }
     
 }
