@@ -28,13 +28,14 @@ final class UnaryPlusMinusExpression extends Expression {
 
     private final Expression target;
     private final boolean isMinus;
-    private static final Integer MINUS_ONE = new Integer(-1); 
+    private static final Integer MINUS_ONE = Integer.valueOf(-1); 
 
     UnaryPlusMinusExpression(Expression target, boolean isMinus) {
         this.target = target;
         this.isMinus = isMinus;
     }
     
+    @Override
     TemplateModel _eval(Environment env) throws TemplateException {
         TemplateNumberModel targetModel = null;
         TemplateModel tm = target.eval(env);
@@ -52,43 +53,45 @@ final class UnaryPlusMinusExpression extends Expression {
         return new SimpleNumber(n);
     }
     
+    @Override
     public String getCanonicalForm() {
         String op = isMinus ? "-" : "+";
         return op + target.getCanonicalForm();
     }
 
+    @Override
     String getNodeTypeSymbol() {
         return isMinus ? "-..." : "+...";
     }
     
+    @Override
     boolean isLiteral() {
         return target.isLiteral();
     }
 
+    @Override
     protected Expression deepCloneWithIdentifierReplaced_inner(
             String replacedIdentifier, Expression replacement, ReplacemenetState replacementState) {
     	return new UnaryPlusMinusExpression(
     	        target.deepCloneWithIdentifierReplaced(replacedIdentifier, replacement, replacementState),
     	        isMinus);
     }
-    
-    
-    boolean isIgnorable() {
-        return true;
-    }
 
+    @Override
     int getParameterCount() {
         return 2;
     }
 
+    @Override
     Object getParameterValue(int idx) {
         switch (idx) {
         case 0: return target;
-        case 1: return new Integer(isMinus ? TYPE_MINUS : TYPE_PLUS);
+        case 1: return Integer.valueOf(isMinus ? TYPE_MINUS : TYPE_PLUS);
         default: throw new IndexOutOfBoundsException();
         }
     }
 
+    @Override
     ParameterRole getParameterRole(int idx) {
         switch (idx) {
         case 0: return ParameterRole.RIGHT_HAND_OPERAND;
