@@ -47,12 +47,15 @@ import freemarker.template.AdapterTemplateModel;
 import freemarker.template.Configuration;
 import freemarker.template.DefaultObjectWrapper;
 import freemarker.template.ObjectWrapper;
+import freemarker.template.ObjectWrapperAndUnwrapper;
 import freemarker.template.SimpleObjectWrapper;
 import freemarker.template.TemplateBooleanModel;
 import freemarker.template.TemplateCollectionModel;
 import freemarker.template.TemplateDateModel;
 import freemarker.template.TemplateHashModel;
+import freemarker.template.TemplateMethodModelEx;
 import freemarker.template.TemplateModel;
+import freemarker.template.TemplateModelAdapter;
 import freemarker.template.TemplateModelException;
 import freemarker.template.TemplateNumberModel;
 import freemarker.template.TemplateScalarModel;
@@ -60,31 +63,40 @@ import freemarker.template.TemplateSequenceModel;
 import freemarker.template.Version;
 import freemarker.template._TemplateAPI;
 import freemarker.template.utility.ClassUtil;
-import freemarker.template.utility.NullArgumentException;
+import freemarker.template.utility.RichObjectWrapper;
 import freemarker.template.utility.UndeclaredThrowableException;
 import freemarker.template.utility.WriteProtectable;
 
 /**
  * {@link ObjectWrapper} that is able to expose the Java API of arbitrary Java objects. This is also the superclass of
- * {@link DefaultObjectWrapper}. Note that instances of this class generally should be created with
+ * {@link DefaultObjectWrapper}. Note that instances of this class generally should be created with a
  * {@link BeansWrapperBuilder}, not with its public constructors.
  * 
- * <p>This class is only thread-safe after you have finished calling its setter methods, and then safely published
- * it (see JSR 133 and related literature). When used as part of {@link Configuration}, of course it's enough if that
- * was safely published and then left unmodified. Using {@link BeansWrapperBuilder} also guarantees thread safety. 
+ * <p>
+ * As of 2.3.22, using {@link BeansWrapper} unextended is not recommended. Instead, {@link DefaultObjectWrapper} with
+ * its {@code incompatibleImprovements} property set to 2.3.22 (or higher) is the recommended {@link ObjectWrapper}.
+ * 
+ * <p>
+ * This class is only thread-safe after you have finished calling its setter methods, and then safely published it (see
+ * JSR 133 and related literature). When used as part of {@link Configuration}, of course it's enough if that was safely
+ * published and then left unmodified. Using {@link BeansWrapperBuilder} also guarantees thread safety.
  */
-public class BeansWrapper implements ObjectWrapper, WriteProtectable
-{
+public class BeansWrapper implements RichObjectWrapper, WriteProtectable {
     private static final Logger LOG = Logger.getLogger("freemarker.beans");
 
-    static final Object CAN_NOT_UNWRAP = new Object();
+    /**
+     * @deprecated Use {@link ObjectWrapperAndUnwrapper#CANT_UNWRAP_TO_TARGET_CLASS} instead. It's not a public field
+     *             anyway.
+     */
+    @Deprecated
+    static final Object CAN_NOT_UNWRAP = ObjectWrapperAndUnwrapper.CANT_UNWRAP_TO_TARGET_CLASS;
+    
     private static final Class ITERABLE_CLASS;
     static {
         Class iterable;
         try {
             iterable = Class.forName("java.lang.Iterable");
-        }
-        catch(ClassNotFoundException e) {
+        } catch (ClassNotFoundException e) {
             // We're running on a pre-1.5 JRE
             iterable = null;
         }
@@ -132,7 +144,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
     // -----------------------------------------------------------------------------------------------------------------
     // Introspection cache:
     
-    private final Object sharedInrospectionLock;
+    private final Object sharedIntrospectionLock;
     
     /** 
      * {@link Class} to class info cache.
@@ -192,6 +204,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * 
      * @deprecated Use {@link BeansWrapperBuilder} or, in rare cases, {@link #BeansWrapper(Version)} instead.
      */
+    @Deprecated
     public BeansWrapper() {
         this(Configuration.DEFAULT_INCOMPATIBLE_IMPROVEMENTS);
         // Attention! Don't change fields here, as the instance is possibly already visible to other threads.  
@@ -250,14 +263,27 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
     private static volatile boolean ftmaDeprecationWarnLogged;
     
     /**
-     * Initializes the instance based on the the {@link BeansWrapperConfiguration} specified.
-     * 
-     * @param readOnly makes the instance's configuration settings read-only via
-     *     {@link WriteProtectable#writeProtect()}; this way it can use the shared class introspection cache.
+     * Same as {@link #BeansWrapper(BeansWrapperConfiguration, boolean, boolean)} with {@code true}
+     * {@code finalizeConstruction} argument.
      * 
      * @since 2.3.21
      */
-    protected BeansWrapper(BeansWrapperConfiguration bwConf, boolean readOnly) {
+    protected BeansWrapper(BeansWrapperConfiguration bwConf, boolean writeProtected) {
+        this(bwConf, writeProtected, true);
+    }
+    
+    /**
+     * Initializes the instance based on the the {@link BeansWrapperConfiguration} specified.
+     * 
+     * @param writeProtected Makes the instance's configuration settings read-only via
+     *     {@link WriteProtectable#writeProtect()}; this way it can use the shared class introspection cache.
+     *     
+     * @param finalizeConstruction Decides if the construction is finalized now, or the caller will do some more
+     *     adjustments on the instance and then call {@link #finalizeConstruction(boolean)} itself. 
+     * 
+     * @since 2.3.22
+     */
+    protected BeansWrapper(BeansWrapperConfiguration bwConf, boolean writeProtected, boolean finalizeConstruction) {
         // Backward-compatibility hack for "finetuneMethodAppearance" overrides to work:
         if (bwConf.getMethodAppearanceFineTuner() == null) {
             Class thisClass = this.getClass();
@@ -310,17 +336,17 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
         outerIdentity = bwConf.getOuterIdentity() != null ? bwConf.getOuterIdentity() : this;
         strict = bwConf.isStrict();
         
-        if (!readOnly) {
+        if (!writeProtected) {
             // As this is not a read-only BeansWrapper, the classIntrospector will be possibly replaced for a few times,
             // but we need to use the same sharedInrospectionLock forever, because that's what the model factories
             // synchronize on, even during the classIntrospector is being replaced.
-            sharedInrospectionLock = new Object();
-            classIntrospector = new ClassIntrospector(bwConf.classIntrospectorFactory, sharedInrospectionLock);
+            sharedIntrospectionLock = new Object();
+            classIntrospector = new ClassIntrospector(bwConf.classIntrospectorFactory, sharedIntrospectionLock);
         } else {
             // As this is a read-only BeansWrapper, the classIntrospector is never replaced, and since it's shared by
             // other BeansWrapper instances, we use the lock belonging to the shared ClassIntrospector.
-            classIntrospector = bwConf.classIntrospectorFactory.getResult();
-            sharedInrospectionLock = classIntrospector.getSharedLock(); 
+            classIntrospector = bwConf.classIntrospectorFactory.build();
+            sharedIntrospectionLock = classIntrospector.getSharedLock(); 
         }
         
         falseModel = new BooleanModel(Boolean.FALSE, this);
@@ -331,7 +357,19 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
         modelCache = new BeansModelCache(BeansWrapper.this);
         setUseCache(bwConf.getUseModelCache());
 
-        if (readOnly) {
+        finalizeConstruction(writeProtected);
+    }
+
+    /**
+     * Meant to be called after {@link BeansWrapper#BeansWrapper(BeansWrapperConfiguration, boolean, boolean)} when
+     * its last argument was {@code false}; makes the instance read-only if necessary, then registers the model
+     * factories in the class introspector. No further changes should be done after calling this, if
+     * {@code writeProtected} was {@code true}. 
+     * 
+     * @since 2.3.22
+     */
+    protected void finalizeConstruction(boolean writeProtected) {
+        if (writeProtected) {
             writeProtect();
         }
         
@@ -364,8 +402,8 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
         return writeProtected;
     }
     
-    Object getSharedInrospectionLock() {
-        return sharedInrospectionLock;
+    Object getSharedIntrospectionLock() {
+        return sharedIntrospectionLock;
     }
     
     /**
@@ -421,8 +459,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * which will be used to wrap the sub-objects.
      * @param outerIdentity the aggregate ObjectWrapper
      */
-    public void setOuterIdentity(ObjectWrapper outerIdentity)
-    {
+    public void setOuterIdentity(ObjectWrapper outerIdentity) {
         checkModifiable();
         this.outerIdentity = outerIdentity;
     }
@@ -431,8 +468,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * By default returns <tt>this</tt>.
      * @see #setOuterIdentity(ObjectWrapper)
      */
-    public ObjectWrapper getOuterIdentity()
-    {
+    public ObjectWrapper getOuterIdentity() {
         return outerIdentity;
     }
 
@@ -459,8 +495,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      *       the "field"-namespaces aren't separate in FreeMarker, hence {@code myMap.get} can return the {@code get}
      *       method.
      */
-    public void setSimpleMapWrapper(boolean simpleMapWrapper)
-    {
+    public void setSimpleMapWrapper(boolean simpleMapWrapper) {
         checkModifiable();
         this.simpleMapWrapper = simpleMapWrapper;
     }
@@ -471,8 +506,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * @return true if Maps are exposed as simple hashes, false if they're
      * exposed as full JavaBeans.
      */
-    public boolean isSimpleMapWrapper()
-    {
+    public boolean isSimpleMapWrapper() {
         return simpleMapWrapper;
     }
 
@@ -506,8 +540,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * @param exposureLevel can be any of the <code>EXPOSE_xxx</code>
      * constants.
      */
-    public void setExposureLevel(int exposureLevel)
-    {
+    public void setExposureLevel(int exposureLevel) {
         checkModifiable();
      
         if (classIntrospector.getExposureLevel() != exposureLevel) {
@@ -520,8 +553,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
     /**
      * @since 2.3.21
      */
-    public int getExposureLevel()
-    {
+    public int getExposureLevel() {
         return classIntrospector.getExposureLevel();
     }
     
@@ -535,8 +567,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * referring to "foo" in template invokes the getter. If set to false, no
      * access to public instance fields of classes is given. Default is false.
      */
-    public void setExposeFields(boolean exposeFields)
-    {
+    public void setExposeFields(boolean exposeFields) {
         checkModifiable();
         
         if (classIntrospector.getExposeFields() != exposeFields) {
@@ -551,8 +582,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * enabled. See {@link #setExposeFields(boolean)} for details.
      * @return true if public instance fields are exposed, false otherwise.
      */
-    public boolean isExposeFields()
-    {
+    public boolean isExposeFields() {
         return classIntrospector.getExposeFields();
     }
     
@@ -609,7 +639,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
     private void replaceClassIntrospector(ClassIntrospectorBuilder pa) {
         checkModifiable();
         
-        final ClassIntrospector newCI = new ClassIntrospector(pa, sharedInrospectionLock);
+        final ClassIntrospector newCI = new ClassIntrospector(pa, sharedIntrospectionLock);
         final ClassIntrospector oldCI;
         
         // In principle this need not be synchronized, but as apps might publish the configuration improperly, or
@@ -617,7 +647,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
         // as classIntrospector reading aren't everywhere synchronized for performance reasons. It still decreases the
         // chance of accidents, because some ops on classIntrospector are synchronized, and because it will at least
         // push the new value into the common shared memory.
-        synchronized (sharedInrospectionLock) {
+        synchronized (sharedIntrospectionLock) {
             oldCI = classIntrospector;
             if (oldCI != null) {
                 // Note that after unregistering the model factory might still gets some callback from the old
@@ -670,8 +700,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * When set to false, the lookup order is reversed and generic get method
      * is called first, and only if it returns null is method lookup attempted.
      */
-    public void setMethodsShadowItems(boolean methodsShadowItems)
-    {
+    public void setMethodsShadowItems(boolean methodsShadowItems) {
         // This sync is here as this method was originally synchronized, but was never truly thread-safe, so I don't
         // want to advertise it in the javadoc, nor I wanted to break any apps that work because of this accidentally.
         synchronized (this) {
@@ -680,8 +709,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
         }
     }
     
-    boolean isMethodsShadowItems()
-    {
+    boolean isMethodsShadowItems() {
         return methodsShadowItems;
     }
     
@@ -718,8 +746,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * the same object will likely return the same model (although there is
      * no guarantee as the cache items can be cleared any time).
      */
-    public void setUseCache(boolean useCache)
-    {
+    public void setUseCache(boolean useCache) {
         checkModifiable();
         modelCache.setUseCache(useCache);
     }
@@ -727,21 +754,21 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
     /**
      * @since 2.3.21
      */
-    public boolean getUseCache()
-    {
+    public boolean getUseCache() {
         return modelCache.getUseCache();
     }
     
     /**
-     * Sets the null model. This model is returned from the
-     * {@link #wrap(Object)} method whenever the underlying object 
-     * reference is null. It defaults to null reference, which is dealt 
-     * with quite strictly on engine level, however you can substitute an 
-     * arbitrary (perhaps more lenient) model, such as 
-     * {@link freemarker.template.TemplateScalarModel#EMPTY_STRING}.
+     * Sets the null model. This model is returned from the {@link #wrap(Object)} method whenever the wrapped object is
+     * {@code null}. It defaults to {@code null}, which is dealt with quite strictly on engine level, however you can
+     * substitute an arbitrary (perhaps more lenient) model, like an empty string. For proper working, the
+     * {@code nullModel} should be an {@link AdapterTemplateModel} that returns {@code null} for
+     * {@link AdapterTemplateModel#getAdaptedObject(Class)}.
+     * 
+     * @deprecated Changing the {@code null} model can cause a lot of confusion; don't do it.
      */
-    public void setNullModel(TemplateModel nullModel)
-    {
+    @Deprecated
+    public void setNullModel(TemplateModel nullModel) {
         checkModifiable();
         this.nullModel = nullModel;
     }
@@ -769,7 +796,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * @since 2.3.21
      */
     protected static Version normalizeIncompatibleImprovementsVersion(Version incompatibleImprovements) {
-        NullArgumentException.check("version", incompatibleImprovements);
+        _TemplateAPI.checkVersionNotNullAndSupported(incompatibleImprovements);
         if (incompatibleImprovements.intValue() < _TemplateAPI.VERSION_INT_2_3_0) {
             throw new IllegalArgumentException("Version must be at least 2.3.0.");
         }
@@ -790,8 +817,8 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * @deprecated Use {@link BeansWrapperBuilder} instead. The instance returned here is not read-only, so it's
      *     dangerous to use.
      */
-    public static final BeansWrapper getDefaultInstance()
-    {
+    @Deprecated
+    public static final BeansWrapper getDefaultInstance() {
         return BeansWrapperSingletonHolder.INSTANCE;
     }
 
@@ -812,71 +839,95 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * <li>if the object is an Iterator, returns a {@link IteratorModel} for it
      * <li>if the object is an Enumeration, returns a {@link EnumerationModel} for it
      * <li>if the object is a String, returns a {@link StringModel} for it
-     * <li>otherwise, returns a generic {@link BeanModel} for it.
+     * <li>otherwise, returns a generic {@link StringModel} for it.
      * </ul>
      */
-    public TemplateModel wrap(Object object) throws TemplateModelException
-    {
-        if(object == null) return nullModel;
+    public TemplateModel wrap(Object object) throws TemplateModelException {
+        if (object == null) return nullModel;
         return modelCache.getInstance(object);
+    }
+    
+    /**
+     * Wraps a Java method so that it can be called from templates, without wrapping its parent ("this") object. The
+     * result is almost the same as that you would get by wrapping the parent object then getting the method from the
+     * resulting {@link TemplateHashModel} by name. Except, if the wrapped method is overloaded, with this method you
+     * explicitly select a an overload, while otherwise you would get a {@link TemplateMethodModelEx} that selects an
+     * overload each time it's called based on the argument values.
+     * 
+     * @param object The object whose method will be called, or {@code null} if {@code method} is a static method.
+     *          This object will be used "as is", like without unwrapping it if it's a {@link TemplateModelAdapter}.
+     * @param method The method to call, which must be an (inherited) member of the class of {@code object}, as
+     *          described by {@link Method#invoke(Object, Object...)}
+     * 
+     * @since 2.3.22
+     */
+    public TemplateMethodModelEx wrap(Object object, Method method) {
+        return new SimpleMethodModel(object, method, method.getParameterTypes(), this);
+    }
+    
+    /**
+     * @since 2.3.22
+     */
+    public TemplateHashModel wrapAsAPI(Object obj) throws TemplateModelException {
+        return new APIModel(obj, this);
     }
 
     /**
      * @deprecated override {@link #getModelFactory(Class)} instead. Using this
      * method will now bypass wrapper caching (if it's enabled) and always 
      * result in creation of a new wrapper. This method will be removed in 2.4
-     * @param object
-     * @param factory
+     * @param object The object to wrap
+     * @param factory The factory that wraps the object
      */
-    protected TemplateModel getInstance(Object object, ModelFactory factory)
-    {
+    @Deprecated
+    protected TemplateModel getInstance(Object object, ModelFactory factory) {
         return factory.create(object, this);
     }
 
     private final ModelFactory BOOLEAN_FACTORY = new ModelFactory() {
         public TemplateModel create(Object object, ObjectWrapper wrapper) {
-            return ((Boolean)object).booleanValue() ? trueModel : falseModel; 
+            return ((Boolean) object).booleanValue() ? trueModel : falseModel; 
         }
     };
 
     private static final ModelFactory ITERATOR_FACTORY = new ModelFactory() {
         public TemplateModel create(Object object, ObjectWrapper wrapper) {
-            return new IteratorModel((Iterator)object, (BeansWrapper)wrapper); 
+            return new IteratorModel((Iterator) object, (BeansWrapper) wrapper); 
         }
     };
 
     private static final ModelFactory ENUMERATION_FACTORY = new ModelFactory() {
         public TemplateModel create(Object object, ObjectWrapper wrapper) {
-            return new EnumerationModel((Enumeration)object, (BeansWrapper)wrapper); 
+            return new EnumerationModel((Enumeration) object, (BeansWrapper) wrapper); 
         }
     };
 
     protected ModelFactory getModelFactory(Class clazz) {
-        if(Map.class.isAssignableFrom(clazz)) {
+        if (Map.class.isAssignableFrom(clazz)) {
             return simpleMapWrapper ? SimpleMapModel.FACTORY : MapModel.FACTORY;
         }
-        if(Collection.class.isAssignableFrom(clazz)) {
+        if (Collection.class.isAssignableFrom(clazz)) {
             return CollectionModel.FACTORY;
         }
-        if(Number.class.isAssignableFrom(clazz)) {
+        if (Number.class.isAssignableFrom(clazz)) {
             return NumberModel.FACTORY;
         }
-        if(Date.class.isAssignableFrom(clazz)) {
+        if (Date.class.isAssignableFrom(clazz)) {
             return DateModel.FACTORY;
         }
-        if(Boolean.class == clazz) { // Boolean is final 
+        if (Boolean.class == clazz) { // Boolean is final 
             return BOOLEAN_FACTORY;
         }
-        if(ResourceBundle.class.isAssignableFrom(clazz)) {
+        if (ResourceBundle.class.isAssignableFrom(clazz)) {
             return ResourceBundleModel.FACTORY;
         }
-        if(Iterator.class.isAssignableFrom(clazz)) {
+        if (Iterator.class.isAssignableFrom(clazz)) {
             return ITERATOR_FACTORY;
         }
-        if(Enumeration.class.isAssignableFrom(clazz)) {
+        if (Enumeration.class.isAssignableFrom(clazz)) {
             return ENUMERATION_FACTORY;
         }
-        if(clazz.isArray()) {
+        if (clazz.isArray()) {
             return ArrayModel.FACTORY;
         }
         return StringModel.FACTORY;
@@ -895,51 +946,50 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * returned unchanged.
      * @throws TemplateModelException if an attempted unwrapping fails.
      */
-    public Object unwrap(TemplateModel model) throws TemplateModelException
-    {
+    public Object unwrap(TemplateModel model) throws TemplateModelException {
         return unwrap(model, Object.class);
     }
-    
+
     /**
      * Attempts to unwrap a model into an object of the desired class. 
      * Generally, this method is the inverse of the {@link #wrap(Object)} 
-     * method. It recognizes a wide range of hint classes - all Java built-in
+     * method. It recognizes a wide range of target classes - all Java built-in
      * primitives, primitive wrappers, numbers, dates, sets, lists, maps, and
      * native arrays.
      * @param model the model to unwrap
-     * @param hint the class of the unwrapped result
+     * @param targetClass the class of the unwrapped result; {@code Object.class} of we don't know what the expected type is.
      * @return the unwrapped result of the desired class
      * @throws TemplateModelException if an attempted unwrapping fails.
+     * 
+     * @see #tryUnwrapTo(TemplateModel, Class)
      */
-    public Object unwrap(TemplateModel model, Class hint) 
-    throws TemplateModelException
-    {
-        final Object obj = tryUnwrap(model, hint);
-        if(obj == CAN_NOT_UNWRAP) {
+    public Object unwrap(TemplateModel model, Class targetClass) 
+    throws TemplateModelException {
+        final Object obj = tryUnwrapTo(model, targetClass);
+        if (obj == ObjectWrapperAndUnwrapper.CANT_UNWRAP_TO_TARGET_CLASS) {
           throw new TemplateModelException("Can not unwrap model of type " + 
-              model.getClass().getName() + " to type " + hint.getName());
+              model.getClass().getName() + " to type " + targetClass.getName());
         }
         return obj;
     }
 
     /**
-     * Same as {@link #tryUnwrap(TemplateModel, Class, int)} with 0 type flags argument.
+     * @since 2.3.22
      */
-    Object tryUnwrap(TemplateModel model, Class hint) throws TemplateModelException
-    {
-        return tryUnwrap(model, hint, 0);
+    public Object tryUnwrapTo(TemplateModel model, Class targetClass) throws TemplateModelException {
+        return tryUnwrapTo(model, targetClass, 0);
     }
     
     /**
-     * @param typeFlags Used when unwrapping for overloaded methods and so the {@code hint} is possibly too generic.
-     *        Must be 0 when unwrapping parameter values for non-overloaded methods, also if {@link #is2321Bugfixed()}
-     *        is {@code false}.
-     * @return {@link #CAN_NOT_UNWRAP} or the unwrapped object.
+     * @param typeFlags
+     *            Used when unwrapping for overloaded methods and so the {@code targetClass} is possibly too generic.
+     *            Must be 0 when unwrapping parameter values for non-overloaded methods, also if
+     *            {@link #is2321Bugfixed()} is {@code false}.
+     * @return {@link ObjectWrapperAndUnwrapper#CANT_UNWRAP_TO_TARGET_CLASS} or the unwrapped object.
      */
-    Object tryUnwrap(TemplateModel model, Class hint, int typeFlags) 
-    throws TemplateModelException
-    {
-        Object res = tryUnwrap(model, hint, typeFlags, null);
+    Object tryUnwrapTo(TemplateModel model, Class targetClass, int typeFlags) 
+    throws TemplateModelException {
+        Object res = tryUnwrapTo(model, targetClass, typeFlags, null);
         if ((typeFlags & TypeFlags.WIDENED_NUMERICAL_UNWRAPPING_HINT) != 0
                 && res instanceof Number) {
             return OverloadedNumberUtil.addFallbackType((Number) res, typeFlags);
@@ -951,141 +1001,143 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
     /**
      * See {@try #tryUnwrap(TemplateModel, Class, int, boolean)}.
      */
-    private Object tryUnwrap(TemplateModel model, Class hint, int typeFlags, Map recursionStops) 
+    private Object tryUnwrapTo(final TemplateModel model, Class targetClass, final int typeFlags, final Map recursionStops) 
     throws TemplateModelException {
-        if(model == null || model == nullModel) {
+        if (model == null || model == nullModel) {
             return null;
         }
         
         final boolean is2321Bugfixed = is2321Bugfixed();
         
-        if (is2321Bugfixed && hint.isPrimitive()) {
-            hint = ClassUtil.primitiveClassToBoxingClass(hint);            
+        if (is2321Bugfixed && targetClass.isPrimitive()) {
+            targetClass = ClassUtil.primitiveClassToBoxingClass(targetClass);            
         }
         
         // This is for transparent interop with other wrappers (and ourselves)
-        // Passing the hint allows i.e. a Jython-aware method that declares a
+        // Passing the targetClass allows i.e. a Jython-aware method that declares a
         // PyObject as its argument to receive a PyObject from a JythonModel
         // passed as an argument to TemplateMethodModelEx etc.
-        if(model instanceof AdapterTemplateModel) {
-            Object wrapped = ((AdapterTemplateModel)model).getAdaptedObject(
-                    hint);
-            if(hint.isInstance(wrapped)) {
+        if (model instanceof AdapterTemplateModel) {
+            Object wrapped = ((AdapterTemplateModel) model).getAdaptedObject(
+                    targetClass);
+            if (targetClass == Object.class || targetClass.isInstance(wrapped)) {
                 return wrapped;
             }
             
             // Attempt numeric conversion: 
-            if(wrapped instanceof Number && ClassUtil.isNumerical(hint)) {
-                Number number = forceUnwrappedNumberToType((Number) wrapped, hint, is2321Bugfixed);
-                if(number != null) return number;
+            if (targetClass != Object.class && (wrapped instanceof Number && ClassUtil.isNumerical(targetClass))) {
+                Number number = forceUnwrappedNumberToType((Number) wrapped, targetClass, is2321Bugfixed);
+                if (number != null) return number;
             }
         }
         
-        if(model instanceof WrapperTemplateModel) {
-            Object wrapped = ((WrapperTemplateModel)model).getWrappedObject();
-            if(hint.isInstance(wrapped)) {
+        if (model instanceof WrapperTemplateModel) {
+            Object wrapped = ((WrapperTemplateModel) model).getWrappedObject();
+            if (targetClass == Object.class || targetClass.isInstance(wrapped)) {
                 return wrapped;
             }
             
             // Attempt numeric conversion: 
-            if(wrapped instanceof Number && ClassUtil.isNumerical(hint)) {
-                Number number = forceUnwrappedNumberToType((Number) wrapped, hint, is2321Bugfixed);
-                if(number != null) {
+            if (targetClass != Object.class && (wrapped instanceof Number && ClassUtil.isNumerical(targetClass))) {
+                Number number = forceUnwrappedNumberToType((Number) wrapped, targetClass, is2321Bugfixed);
+                if (number != null) {
                     return number;
                 }
             }
         }
         
         // Translation of generic template models to POJOs. First give priority
-        // to various model interfaces based on the hint class. This helps us
+        // to various model interfaces based on the targetClass. This helps us
         // select the appropriate interface in multi-interface models when we
         // know what is expected as the return type.
+        if (targetClass != Object.class) {
 
-        // Java 5: Also should check for CharSequence at the end
-        if(String.class == hint) {
-            if(model instanceof TemplateScalarModel) {
-                return ((TemplateScalarModel)model).getAsString();
+            // [2.4][IcI]: Should also check for CharSequence at the end
+            if (String.class == targetClass) {
+                if (model instanceof TemplateScalarModel) {
+                    return ((TemplateScalarModel) model).getAsString();
+                }
+                // String is final, so no other conversion will work
+                return ObjectWrapperAndUnwrapper.CANT_UNWRAP_TO_TARGET_CLASS;
             }
-            // String is final, so no other conversion will work
-            return CAN_NOT_UNWRAP;
-        }
-
-        // Primitive numeric types & Number.class and its subclasses
-        if(ClassUtil.isNumerical(hint)) {
-            if(model instanceof TemplateNumberModel) {
-                Number number = forceUnwrappedNumberToType(
-                        ((TemplateNumberModel)model).getAsNumber(), hint, is2321Bugfixed);
-                if(number != null) {
-                    return number;
+    
+            // Primitive numeric types & Number.class and its subclasses
+            if (ClassUtil.isNumerical(targetClass)) {
+                if (model instanceof TemplateNumberModel) {
+                    Number number = forceUnwrappedNumberToType(
+                            ((TemplateNumberModel) model).getAsNumber(), targetClass, is2321Bugfixed);
+                    if (number != null) {
+                        return number;
+                    }
                 }
             }
-        }
-        
-        if(boolean.class == hint || Boolean.class == hint) {
-            if(model instanceof TemplateBooleanModel) {
-                return Boolean.valueOf(((TemplateBooleanModel) model).getAsBoolean());
+            
+            if (boolean.class == targetClass || Boolean.class == targetClass) {
+                if (model instanceof TemplateBooleanModel) {
+                    return Boolean.valueOf(((TemplateBooleanModel) model).getAsBoolean());
+                }
+                // Boolean is final, no other conversion will work
+                return ObjectWrapperAndUnwrapper.CANT_UNWRAP_TO_TARGET_CLASS;
             }
-            // Boolean is final, no other conversion will work
-            return CAN_NOT_UNWRAP;
-        }
-
-        if(Map.class == hint) {
-            if(model instanceof TemplateHashModel) {
-                return new HashAdapter((TemplateHashModel)model, this);
-            }
-        }
-        
-        if(List.class == hint) {
-            if(model instanceof TemplateSequenceModel) {
-                return new SequenceAdapter((TemplateSequenceModel)model, this);
-            }
-        }
-        
-        if(Set.class == hint) {
-            if(model instanceof TemplateCollectionModel) {
-                return new SetAdapter((TemplateCollectionModel)model, this);
-            }
-        }
-        
-        if(Collection.class == hint || ITERABLE_CLASS == hint) {
-            if(model instanceof TemplateCollectionModel) {
-                return new CollectionAdapter((TemplateCollectionModel)model, 
-                        this);
-            }
-            if(model instanceof TemplateSequenceModel) {
-                return new SequenceAdapter((TemplateSequenceModel)model, this);
-            }
-        }
-        
-        // TemplateSequenceModels can be converted to arrays
-        if(hint.isArray()) {
-            if(model instanceof TemplateSequenceModel) {
-                return unwrapSequenceToArray((TemplateSequenceModel) model, hint, true, recursionStops);
-            }
-            // array classes are final, no other conversion will work
-            return CAN_NOT_UNWRAP;
-        }
-        
-        // Allow one-char strings to be coerced to characters
-        if(char.class == hint || hint == Character.class) {
-            if(model instanceof TemplateScalarModel) {
-                String s = ((TemplateScalarModel)model).getAsString();
-                if(s.length() == 1) {
-                    return new Character(s.charAt(0));
+    
+            if (Map.class == targetClass) {
+                if (model instanceof TemplateHashModel) {
+                    return new HashAdapter((TemplateHashModel) model, this);
                 }
             }
-            // Character is final, no other conversion will work
-            return CAN_NOT_UNWRAP;
-        }
-
-        if(Date.class.isAssignableFrom(hint) && model instanceof TemplateDateModel) {
-            Date date = ((TemplateDateModel)model).getAsDate();
-            if(hint.isInstance(date)) {
-                return date;
+            
+            if (List.class == targetClass) {
+                if (model instanceof TemplateSequenceModel) {
+                    return new SequenceAdapter((TemplateSequenceModel) model, this);
+                }
             }
-        }
+            
+            if (Set.class == targetClass) {
+                if (model instanceof TemplateCollectionModel) {
+                    return new SetAdapter((TemplateCollectionModel) model, this);
+                }
+            }
+            
+            if (Collection.class == targetClass || ITERABLE_CLASS == targetClass) {
+                if (model instanceof TemplateCollectionModel) {
+                    return new CollectionAdapter((TemplateCollectionModel) model, 
+                            this);
+                }
+                if (model instanceof TemplateSequenceModel) {
+                    return new SequenceAdapter((TemplateSequenceModel) model, this);
+                }
+            }
+            
+            // TemplateSequenceModels can be converted to arrays
+            if (targetClass.isArray()) {
+                if (model instanceof TemplateSequenceModel) {
+                    return unwrapSequenceToArray((TemplateSequenceModel) model, targetClass, true, recursionStops);
+                }
+                // array classes are final, no other conversion will work
+                return ObjectWrapperAndUnwrapper.CANT_UNWRAP_TO_TARGET_CLASS;
+            }
+            
+            // Allow one-char strings to be coerced to characters
+            if (char.class == targetClass || targetClass == Character.class) {
+                if (model instanceof TemplateScalarModel) {
+                    String s = ((TemplateScalarModel) model).getAsString();
+                    if (s.length() == 1) {
+                        return Character.valueOf(s.charAt(0));
+                    }
+                }
+                // Character is final, no other conversion will work
+                return ObjectWrapperAndUnwrapper.CANT_UNWRAP_TO_TARGET_CLASS;
+            }
+    
+            if (Date.class.isAssignableFrom(targetClass) && model instanceof TemplateDateModel) {
+                Date date = ((TemplateDateModel) model).getAsDate();
+                if (targetClass.isInstance(date)) {
+                    return date;
+                }
+            }
+        }  //  End: if (targetClass != Object.class)
         
-        // Since the hint class was of no help initially, now we use
+        // Since the targetClass was of no help initially, now we use
         // a quite arbitrary order in which we walk through the TemplateModel subinterfaces, and unwrapp them to
         // their "natural" Java correspondent. We still try exclude unwrappings that won't fit the target parameter
         // type(s). This is mostly important because of multi-typed FTL values that could be unwrapped on multiple ways.
@@ -1096,20 +1148,20 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
             if ((itf == 0 || (itf & TypeFlags.ACCEPTS_NUMBER) != 0)
                     && model instanceof TemplateNumberModel) {
                 Number number = ((TemplateNumberModel) model).getAsNumber();
-                if (itf != 0 || hint.isInstance(number)) {
+                if (itf != 0 || targetClass.isInstance(number)) {
                     return number;
                 }
             }
             if ((itf == 0 || (itf & TypeFlags.ACCEPTS_DATE) != 0)
                     && model instanceof TemplateDateModel) {
                 Date date = ((TemplateDateModel) model).getAsDate();
-                if (itf != 0 || hint.isInstance(date)) {
+                if (itf != 0 || targetClass.isInstance(date)) {
                     return date;
                 }
             }
             if ((itf == 0 || (itf & (TypeFlags.ACCEPTS_STRING | TypeFlags.CHARACTER)) != 0)
                     && model instanceof TemplateScalarModel
-                    && (itf != 0 || hint.isAssignableFrom(String.class))) {
+                    && (itf != 0 || targetClass.isAssignableFrom(String.class))) {
                 String strVal = ((TemplateScalarModel) model).getAsString();
                 if (itf == 0 || (itf & TypeFlags.CHARACTER) == 0) {
                     return strVal;
@@ -1118,7 +1170,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
                         if ((itf & TypeFlags.ACCEPTS_STRING) != 0) {
                             return new CharacterOrString(strVal);
                         } else {
-                            return new Character(strVal.charAt(0));
+                            return Character.valueOf(strVal.charAt(0));
                         }
                     } else if ((itf & TypeFlags.ACCEPTS_STRING) != 0) {
                         return strVal; 
@@ -1126,24 +1178,25 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
                     // It had to be unwrapped to Character, but the string length wasn't 1 => Fall through
                 }
             }
+            // Should be earlier than TemplateScalarModel, but we keep it here until FM 2.4 or such
             if ((itf == 0 || (itf & TypeFlags.ACCEPTS_BOOLEAN) != 0)
                     && model instanceof TemplateBooleanModel
-                    && (itf != 0 || hint.isAssignableFrom(Boolean.class))) {
+                    && (itf != 0 || targetClass.isAssignableFrom(Boolean.class))) {
                 return Boolean.valueOf(((TemplateBooleanModel) model).getAsBoolean());
             }
             if ((itf == 0 || (itf & TypeFlags.ACCEPTS_MAP) != 0)
                     && model instanceof TemplateHashModel
-                    && (itf != 0 || hint.isAssignableFrom(HashAdapter.class))) {
+                    && (itf != 0 || targetClass.isAssignableFrom(HashAdapter.class))) {
                 return new HashAdapter((TemplateHashModel) model, this);
             }
             if ((itf == 0 || (itf & TypeFlags.ACCEPTS_LIST) != 0)
                     && model instanceof TemplateSequenceModel 
-                    && (itf != 0 || hint.isAssignableFrom(SequenceAdapter.class))) {
+                    && (itf != 0 || targetClass.isAssignableFrom(SequenceAdapter.class))) {
                 return new SequenceAdapter((TemplateSequenceModel) model, this);
             }
             if ((itf == 0 || (itf & TypeFlags.ACCEPTS_SET) != 0)
                     && model instanceof TemplateCollectionModel
-                    && (itf != 0 || hint.isAssignableFrom(SetAdapter.class))) {
+                    && (itf != 0 || targetClass.isAssignableFrom(SetAdapter.class))) {
                 return new SetAdapter((TemplateCollectionModel) model, this);
             }
             
@@ -1161,23 +1214,26 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
             itf = 0; // start 2nd iteration
         } while (true);
 
-        // Last ditch effort - is maybe the model itself instance of the required type?
-        if (hint.isInstance(model)) {
+        // Last ditch effort - is maybe the model itself is an instance of the required type?
+        // Note that this will be always true for Object.class targetClass. 
+        if (targetClass.isInstance(model)) {
             return model;
         }
         
-        return CAN_NOT_UNWRAP;
+        return ObjectWrapperAndUnwrapper.CANT_UNWRAP_TO_TARGET_CLASS;
     }
 
     /**
-     * @param tryOnly if <tt>true</true>, if the conversion of an item fails, the method returns {@link #CAN_NOT_UNWRAP}
-     *     instead of throwing a {@link TemplateModelException}.
+     * @param tryOnly
+     *            If {@code true}, if the conversion of an item to the component type isn't possible, the method returns
+     *            {@link ObjectWrapperAndUnwrapper#CANT_UNWRAP_TO_TARGET_CLASS} instead of throwing a
+     *            {@link TemplateModelException}.
      */
     Object unwrapSequenceToArray(TemplateSequenceModel seq, Class arrayClass, boolean tryOnly, Map recursionStops)
             throws TemplateModelException {
-        if(recursionStops != null) {
+        if (recursionStops != null) {
             Object retval = recursionStops.get(seq);
-            if(retval != null) {
+            if (retval != null) {
                 return retval;
             }
         } else {
@@ -1190,16 +1246,16 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
             final int size = seq.size();
             for (int i = 0; i < size; i++) {
                 final TemplateModel seqItem = seq.get(i);
-                Object val = tryUnwrap(seqItem, componentType, 0, recursionStops);
-                if(val == CAN_NOT_UNWRAP) {
+                Object val = tryUnwrapTo(seqItem, componentType, 0, recursionStops);
+                if (val == ObjectWrapperAndUnwrapper.CANT_UNWRAP_TO_TARGET_CLASS) {
                     if (tryOnly) {
-                        return CAN_NOT_UNWRAP;
+                        return ObjectWrapperAndUnwrapper.CANT_UNWRAP_TO_TARGET_CLASS;
                     } else {
-                        throw new _TemplateModelException(new Object[] {
+                        throw new _TemplateModelException(
                                 "Failed to convert ",  new _DelayedFTLTypeDescription(seq),
                                 " object to ", new _DelayedShortClassName(array.getClass()),
-                                ": Problematic sequence item at index ", new Integer(i) ," with value type: ",
-                                new _DelayedFTLTypeDescription(seqItem)});
+                                ": Problematic sequence item at index ", Integer.valueOf(i) ," with value type: ",
+                                new _DelayedFTLTypeDescription(seqItem));
                     }
                     
                 }
@@ -1220,9 +1276,9 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
                     recursionStops);
         }
         
-        if(recursionStops != null) {
+        if (recursionStops != null) {
             Object retval = recursionStops.get(list);
-            if(retval != null) {
+            if (retval != null) {
                 return retval;
             }
         } else {
@@ -1236,7 +1292,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
             boolean isComponentTypeNumerical = false;  // will be filled on demand
             boolean isComponentTypeList = false;  // will be filled on demand
             int i = 0;
-            for (Iterator it = list.iterator(); it.hasNext();) {
+            for (Iterator it = list.iterator(); it.hasNext(); ) {
                 Object listItem = it.next();
                 if (listItem != null && !componentType.isInstance(listItem)) {
                     // Type conversion is needed. If we can't do it, we just let it fail at Array.set later.
@@ -1253,8 +1309,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
                             && listItem instanceof String) {
                         String listItemStr = (String) listItem;
                         if (listItemStr.length() == 1) {
-                            // Java 5: use Character.valueOf
-                            listItem = new Character(listItemStr.charAt(0));
+                            listItem = Character.valueOf(listItemStr.charAt(0));
                         }
                     } else if (componentType.isArray()) {
                         if (listItem instanceof List) {
@@ -1308,13 +1363,13 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
         if (targetType == n.getClass()) {
             return n;
         } else if (targetType == int.class || targetType == Integer.class) {
-            return n instanceof Integer ? (Integer) n : new Integer(n.intValue());
+            return n instanceof Integer ? (Integer) n : Integer.valueOf(n.intValue());
         } else if (targetType == long.class || targetType == Long.class) {
-            return n instanceof Long ? (Long) n : new Long(n.longValue());
+            return n instanceof Long ? (Long) n : Long.valueOf(n.longValue());
         } else if (targetType == double.class || targetType == Double.class) {
-            return n instanceof Double ? (Double) n : new Double(n.doubleValue());
-        } else if(targetType == BigDecimal.class) {
-            if(n instanceof BigDecimal) {
+            return n instanceof Double ? (Double) n : Double.valueOf(n.doubleValue());
+        } else if (targetType == BigDecimal.class) {
+            if (n instanceof BigDecimal) {
                 return n;
             } else if (n instanceof BigInteger) {
                 return new BigDecimal((BigInteger) n);
@@ -1325,11 +1380,11 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
                 return new BigDecimal(n.doubleValue());
             }
         } else if (targetType == float.class || targetType == Float.class) {
-            return n instanceof Float ? (Float) n : new Float(n.floatValue());
+            return n instanceof Float ? (Float) n : Float.valueOf(n.floatValue());
         } else if (targetType == byte.class || targetType == Byte.class) {
-            return n instanceof Byte ? (Byte) n : new Byte(n.byteValue());
+            return n instanceof Byte ? (Byte) n : Byte.valueOf(n.byteValue());
         } else if (targetType == short.class || targetType == Short.class) {
-            return n instanceof Short ? (Short) n : new Short(n.shortValue());
+            return n instanceof Short ? (Short) n : Short.valueOf(n.shortValue());
         } else if (targetType == BigInteger.class) {
             if (n instanceof BigInteger) {
                 return n;
@@ -1375,12 +1430,10 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * BeansWrapper never throws TemplateModelException).
      */
     TemplateModel invokeMethod(Object object, Method method, Object[] args)
-    throws
-        InvocationTargetException,
+    throws InvocationTargetException,
         IllegalAccessException,
-        TemplateModelException
-    {
-        // TODO: Java's Method.invoke truncates numbers if the target type has not enough bits to hold the value.
+        TemplateModelException {
+        // [2.4]: Java's Method.invoke truncates numbers if the target type has not enough bits to hold the value.
         // There should at least be an option to check this.
         Object retval = method.invoke(object, args);
         return 
@@ -1402,8 +1455,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * that returns hash models whose elements are the static models of the
      * classes.
      */
-    public TemplateHashModel getStaticModels()
-    {
+    public TemplateHashModel getStaticModels() {
         return staticModels;
     }
     
@@ -1424,7 +1476,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * pre-1.5 JRE, as Java enums aren't supported there.
      */
     public TemplateHashModel getEnumModels() {
-        if(enumModels == null) {
+        if (enumModels == null) {
             throw new UnsupportedOperationException(
                     "Enums not supported before J2SE 5.");
         }
@@ -1445,23 +1497,18 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * @return The instance created; it's not wrapped into {@link TemplateModel}.
      */
     public Object newInstance(Class clazz, List/*<TemplateModel>*/ arguments)
-    throws
-        TemplateModelException
-    {
-        try
-        {
+    throws TemplateModelException {
+        try {
             Object ctors = classIntrospector.get(clazz).get(ClassIntrospector.CONSTRUCTORS_KEY);
-            if(ctors == null)
-            {
+            if (ctors == null) {
                 throw new TemplateModelException("Class " + clazz.getName() + 
                         " has no public constructors.");
             }
             Constructor ctor = null;
             Object[] objargs;
-            if(ctors instanceof SimpleMethod)
-            {
-                SimpleMethod sm = (SimpleMethod)ctors;
-                ctor = (Constructor)sm.getMember();
+            if (ctors instanceof SimpleMethod) {
+                SimpleMethod sm = (SimpleMethod) ctors;
+                ctor = (Constructor) sm.getMember();
                 objargs = sm.unwrapArguments(arguments, this);
                 try {
                     return ctor.newInstance(objargs);
@@ -1469,9 +1516,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
                     if (e instanceof TemplateModelException) throw (TemplateModelException) e;
                     throw _MethodUtil.newInvocationTemplateModelException(null, ctor, e);
                 }
-            }
-            else if(ctors instanceof OverloadedMethods)
-            {
+            } else if (ctors instanceof OverloadedMethods) {
                 final MemberAndArguments mma = ((OverloadedMethods) ctors).getMemberAndArguments(arguments, this);
                 try {
                     return mma.invokeConstructor(this);
@@ -1480,19 +1525,13 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
                     
                     throw _MethodUtil.newInvocationTemplateModelException(null, mma.getCallableMemberDescriptor(), e);
                 }
-            }
-            else
-            {
+            } else {
                 // Cannot happen
                 throw new BugException();
             }
-        }
-        catch (TemplateModelException e)
-        {
+        } catch (TemplateModelException e) {
             throw e;
-        }
-        catch (Exception e)
-        {
+        } catch (Exception e) {
             throw new TemplateModelException(
                     "Error while creating new instance of class " + clazz.getName() + "; see cause exception", e);
         }
@@ -1535,6 +1574,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      *     Note that if the {@code methodAppearanceFineTuner} property is set to non-{@code null}, this method is not
      *     called anymore.
      */
+    @Deprecated
     protected void finetuneMethodAppearance(
             Class clazz, Method m, MethodAppearanceDecision decision) {
         // left everything on its default; do nothing
@@ -1545,26 +1585,23 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * the corresponding formal argument of the method.
      */
     // Unused?
-    public static void coerceBigDecimals(AccessibleObject callable, Object[] args)
-    {
+    public static void coerceBigDecimals(AccessibleObject callable, Object[] args) {
         Class[] formalTypes = null;
-        for(int i = 0; i < args.length; ++i) {
+        for (int i = 0; i < args.length; ++i) {
             Object arg = args[i];
-            if(arg instanceof BigDecimal) {
-                if(formalTypes == null) {
-                    if(callable instanceof Method) {
-                        formalTypes = ((Method)callable).getParameterTypes();
-                    }
-                    else if(callable instanceof Constructor) {
-                        formalTypes = ((Constructor)callable).getParameterTypes();
-                    }
-                    else {
+            if (arg instanceof BigDecimal) {
+                if (formalTypes == null) {
+                    if (callable instanceof Method) {
+                        formalTypes = ((Method) callable).getParameterTypes();
+                    } else if (callable instanceof Constructor) {
+                        formalTypes = ((Constructor) callable).getParameterTypes();
+                    } else {
                         throw new IllegalArgumentException("Expected method or "
                                 + " constructor; callable is " + 
                                 callable.getClass().getName());
                     }
                 }
-                args[i] = coerceBigDecimal((BigDecimal)arg, formalTypes[i]);
+                args[i] = coerceBigDecimal((BigDecimal) arg, formalTypes[i]);
             }
         }
     }
@@ -1573,23 +1610,22 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      * Converts any {@link BigDecimal}s in the passed array to the type of
      * the corresponding formal argument of the method.
      */
-    public static void coerceBigDecimals(Class[] formalTypes, Object[] args)
-    {
+    public static void coerceBigDecimals(Class[] formalTypes, Object[] args) {
         int typeLen = formalTypes.length;
         int argsLen = args.length;
         int min = Math.min(typeLen, argsLen);
-        for(int i = 0; i < min; ++i) {
+        for (int i = 0; i < min; ++i) {
             Object arg = args[i];
-            if(arg instanceof BigDecimal) {
-                args[i] = coerceBigDecimal((BigDecimal)arg, formalTypes[i]);
+            if (arg instanceof BigDecimal) {
+                args[i] = coerceBigDecimal((BigDecimal) arg, formalTypes[i]);
             }
         }
-        if(argsLen > typeLen) {
+        if (argsLen > typeLen) {
             Class varArgType = formalTypes[typeLen - 1];
-            for(int i = typeLen; i < argsLen; ++i) {
+            for (int i = typeLen; i < argsLen; ++i) {
                 Object arg = args[i];
-                if(arg instanceof BigDecimal) {
-                    args[i] = coerceBigDecimal((BigDecimal)arg, varArgType);
+                if (arg instanceof BigDecimal) {
+                    args[i] = coerceBigDecimal((BigDecimal) arg, varArgType);
                 }
             }
         }
@@ -1597,25 +1633,19 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
 
     public static Object coerceBigDecimal(BigDecimal bd, Class formalType) {
         // int is expected in most situations, so we check it first
-        if(formalType == int.class || formalType == Integer.class) {
-            return new Integer(bd.intValue());
-        }
-        else if(formalType == double.class || formalType == Double.class) {
-            return new Double(bd.doubleValue());
-        }
-        else if(formalType == long.class || formalType == Long.class) {
-            return new Long(bd.longValue());
-        }
-        else if(formalType == float.class || formalType == Float.class) {
-            return new Float(bd.floatValue());
-        }
-        else if(formalType == short.class || formalType == Short.class) {
-            return new Short(bd.shortValue());
-        }
-        else if(formalType == byte.class || formalType == Byte.class) {
-            return new Byte(bd.byteValue());
-        }
-        else if(java.math.BigInteger.class.isAssignableFrom(formalType)) {
+        if (formalType == int.class || formalType == Integer.class) {
+            return Integer.valueOf(bd.intValue());
+        } else if (formalType == double.class || formalType == Double.class) {
+            return Double.valueOf(bd.doubleValue());
+        } else if (formalType == long.class || formalType == Long.class) {
+            return Long.valueOf(bd.longValue());
+        } else if (formalType == float.class || formalType == Float.class) {
+            return Float.valueOf(bd.floatValue());
+        } else if (formalType == short.class || formalType == Short.class) {
+            return Short.valueOf(bd.shortValue());
+        } else if (formalType == byte.class || formalType == Byte.class) {
+            return Byte.valueOf(bd.byteValue());
+        } else if (java.math.BigInteger.class.isAssignableFrom(formalType)) {
             return bd.toBigInteger();
         } else {
             return bd;
@@ -1628,24 +1658,38 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
      *  
      * @since 2.3.21
      */
+    @Override
     public String toString() {
+        final String propsStr = toPropertiesString();
         return ClassUtil.getShortClassNameOfObject(this) + "@" + System.identityHashCode(this)
-                + "(" + incompatibleImprovements + ") { "
-                + "simpleMapWrapper = " + simpleMapWrapper + ", "
-                + "exposureLevel = " + classIntrospector.getExposureLevel() + ", "
-                + "exposeFields = " + classIntrospector.getExposeFields() + ", "
-                + "sharedClassIntrospCache = "
-                + (classIntrospector.isShared() ? "@" + System.identityHashCode(classIntrospector) : "none")
-                + ", ... "
-                + " }";
+                + "(" + incompatibleImprovements + ", "
+                + (propsStr.length() != 0 ? propsStr + ", ..." : "")
+                + ")";
+    }
+    
+    /**
+     * Returns the name-value pairs that describe the configuration of this {@link BeansWrapper}; called from
+     * {@link #toString()}. The expected format is like {@code "foo=bar, baaz=wombat"}. When overriding this, you should
+     * call the super method, and then insert the content before it with a following {@code ", "}, or after it with a
+     * preceding {@code ", "}.
+     * 
+     * @since 2.3.22
+     */
+    protected String toPropertiesString() {
+        // Start with "simpleMapWrapper", because the override in DefaultObjectWrapper expects it to be there!
+        return "simpleMapWrapper=" + simpleMapWrapper + ", "
+               + "exposureLevel=" + classIntrospector.getExposureLevel() + ", "
+               + "exposeFields=" + classIntrospector.getExposeFields() + ", "
+               + "sharedClassIntrospCache="
+               + (classIntrospector.isShared() ? "@" + System.identityHashCode(classIntrospector) : "none");
     }
 
     private static ClassBasedModelFactory createEnumModels(BeansWrapper wrapper) {
-        if(ENUMS_MODEL_CTOR != null) {
+        if (ENUMS_MODEL_CTOR != null) {
             try {
-                return (ClassBasedModelFactory)ENUMS_MODEL_CTOR.newInstance(
+                return (ClassBasedModelFactory) ENUMS_MODEL_CTOR.newInstance(
                         new Object[] { wrapper });
-            } catch(Exception e) {
+            } catch (Exception e) {
                 throw new UndeclaredThrowableException(e);
             }
         } else {
@@ -1661,8 +1705,7 @@ public class BeansWrapper implements ObjectWrapper, WriteProtectable
             return Class.forName(
                 "freemarker.ext.beans._EnumModels").getDeclaredConstructor(
                         new Class[] { BeansWrapper.class });
-        }
-        catch(Exception e) {
+        } catch (Exception e) {
             // Otherwise, return null
             return null;
         }
