@@ -42,7 +42,7 @@ final class EmptyMemberAndArguments extends MaybeEmptyMemberAndArguments {
     static EmptyMemberAndArguments noCompatibleOverload(int unwrappableIndex) {
         return new EmptyMemberAndArguments(
                 new Object[] { "No compatible overloaded variation was found; can't convert (unwrap) the ",
-                new _DelayedOrdinal(new Integer(unwrappableIndex)), " argument to the desired Java type." },
+                new _DelayedOrdinal(Integer.valueOf(unwrappableIndex)), " argument to the desired Java type." },
                 false,
                 null);
     }
@@ -56,7 +56,7 @@ final class EmptyMemberAndArguments extends MaybeEmptyMemberAndArguments {
 
     static EmptyMemberAndArguments ambiguous(Object[] unwrappedArgs) {
         return new EmptyMemberAndArguments(
-                "Multiple compatible overloaded variations were found with the same priorty.",
+                "Multiple compatible overloaded variations were found with the same priority.",
                 false,
                 unwrappedArgs);
     }
