@@ -21,9 +21,12 @@ import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 
+import freemarker.core.TemplateMarkupOutputModel;
 import freemarker.core._DelayedFTLTypeDescription;
 import freemarker.core._DelayedOrdinal;
+import freemarker.core._ErrorDescriptionBuilder;
 import freemarker.core._TemplateModelException;
+import freemarker.template.ObjectWrapperAndUnwrapper;
 import freemarker.template.TemplateModel;
 import freemarker.template.TemplateModelException;
 import freemarker.template.utility.ClassUtil;
@@ -32,38 +35,39 @@ import freemarker.template.utility.ClassUtil;
  * This class is used for as a base for non-overloaded method models and for constructors.
  * (For overloaded methods and constructors see {@link OverloadedMethods}.)
  */
-class SimpleMethod
-{
+class SimpleMethod {
+    
+    static final String MARKUP_OUTPUT_TO_STRING_TIP
+            = "A markup output value can be converted to markup string like value?markup_string. "
+              + "But consider if the Java method whose argument it will be can handle markup strings properly.";
+    
     private final Member member;
     private final Class[] argTypes;
     
-    protected SimpleMethod(Member member, Class[] argTypes)
-    {
+    protected SimpleMethod(Member member, Class[] argTypes) {
         this.member = member;
         this.argTypes = argTypes;
     }
     
-    Object[] unwrapArguments(List arguments, BeansWrapper wrapper) throws TemplateModelException
-    {
-        if(arguments == null) {
+    Object[] unwrapArguments(List arguments, BeansWrapper wrapper) throws TemplateModelException {
+        if (arguments == null) {
             arguments = Collections.EMPTY_LIST;
         }
         boolean isVarArg = _MethodUtil.isVarargs(member);
         int typesLen = argTypes.length;
-        if(isVarArg) {
-            if(typesLen - 1 > arguments.size()) {
-                throw new _TemplateModelException(new Object[] {
+        if (isVarArg) {
+            if (typesLen - 1 > arguments.size()) {
+                throw new _TemplateModelException(
                         _MethodUtil.invocationErrorMessageStart(member),
-                        " takes at least ", new Integer(typesLen - 1),
+                        " takes at least ", Integer.valueOf(typesLen - 1),
                         typesLen - 1 == 1 ? " argument" : " arguments", ", but ",
-                        new Integer(arguments.size()), " was given." });
+                        Integer.valueOf(arguments.size()), " was given.");
             }
-        }
-        else if(typesLen != arguments.size()) {
-            throw new _TemplateModelException(new Object[] {
+        } else if (typesLen != arguments.size()) {
+            throw new _TemplateModelException(
                     _MethodUtil.invocationErrorMessageStart(member), 
-                    " takes ", new Integer(typesLen), typesLen == 1 ? " argument" : " arguments", ", but ",
-                    new Integer(arguments.size()), " was given." });
+                    " takes ", Integer.valueOf(typesLen), typesLen == 1 ? " argument" : " arguments", ", but ",
+                    Integer.valueOf(arguments.size()), " was given.");
         }
          
         Object[] args = unwrapArguments(arguments, argTypes, isVarArg, wrapper);
@@ -73,7 +77,7 @@ class SimpleMethod
     private Object[] unwrapArguments(List args, Class[] argTypes, boolean isVarargs,
             BeansWrapper w) 
     throws TemplateModelException {
-        if(args == null) return null;
+        if (args == null) return null;
         
         int typesLen = argTypes.length;
         int argsLen = args.size();
@@ -87,8 +91,8 @@ class SimpleMethod
         while (argIdx < normalArgCnt) {
             Class argType = argTypes[argIdx];
             TemplateModel argVal = (TemplateModel) it.next();
-            Object unwrappedArgVal = w.tryUnwrap(argVal, argType);
-            if(unwrappedArgVal == BeansWrapper.CAN_NOT_UNWRAP) {
+            Object unwrappedArgVal = w.tryUnwrapTo(argVal, argType);
+            if (unwrappedArgVal == ObjectWrapperAndUnwrapper.CANT_UNWRAP_TO_TARGET_CLASS) {
                 throw createArgumentTypeMismarchException(argIdx, argVal, argType);
             }
             if (unwrappedArgVal == null && argType.isPrimitive()) {
@@ -111,8 +115,8 @@ class SimpleMethod
                 // We first try to treat the last argument as a vararg *array*.
                 // This is consistent to what OverloadedVarArgMethod does.
                 if (argsLen - argIdx == 1
-                        && (unwrappedArgVal = w.tryUnwrap(argVal, varargType))
-                            != BeansWrapper.CAN_NOT_UNWRAP) {
+                        && (unwrappedArgVal = w.tryUnwrapTo(argVal, varargType))
+                            != ObjectWrapperAndUnwrapper.CANT_UNWRAP_TO_TARGET_CLASS) {
                     // It was a vararg array.
                     unwrappedArgs[argIdx++] = unwrappedArgVal;
                 } else {
@@ -122,8 +126,8 @@ class SimpleMethod
                     Object varargArray = Array.newInstance(varargItemType, varargArrayLen);
                     for (int varargIdx = 0; varargIdx < varargArrayLen; varargIdx++) {
                         TemplateModel varargVal = (TemplateModel) (varargIdx == 0 ? argVal : it.next());
-                        Object unwrappedVarargVal = w.tryUnwrap(varargVal, varargItemType);
-                        if(unwrappedVarargVal == BeansWrapper.CAN_NOT_UNWRAP) {
+                        Object unwrappedVarargVal = w.tryUnwrapTo(varargVal, varargItemType);
+                        if (unwrappedVarargVal == ObjectWrapperAndUnwrapper.CANT_UNWRAP_TO_TARGET_CLASS) {
                             throw createArgumentTypeMismarchException(
                                     argIdx + varargIdx, varargVal, varargItemType);
                         }
@@ -143,20 +147,23 @@ class SimpleMethod
 
     private TemplateModelException createArgumentTypeMismarchException(
             int argIdx, TemplateModel argVal, Class targetType) {
-        return new _TemplateModelException(new Object[] {
+        _ErrorDescriptionBuilder desc = new _ErrorDescriptionBuilder(
                 _MethodUtil.invocationErrorMessageStart(member), " couldn't be called: Can't convert the ",
-                new _DelayedOrdinal(new Integer(argIdx + 1)),
+                new _DelayedOrdinal(Integer.valueOf(argIdx + 1)),
                 " argument's value to the target Java type, ", ClassUtil.getShortClassName(targetType),
-                ". The type of the actual value was: ", new _DelayedFTLTypeDescription(argVal),
-                });
+                ". The type of the actual value was: ", new _DelayedFTLTypeDescription(argVal));
+        if (argVal instanceof TemplateMarkupOutputModel && (targetType.isAssignableFrom(String.class))) {
+            desc.tip(MARKUP_OUTPUT_TO_STRING_TIP);
+        }
+        return new _TemplateModelException(desc);
     }
 
     private TemplateModelException createNullToPrimitiveArgumentException(int argIdx, Class targetType) {
-        return new _TemplateModelException(new Object[] {
+        return new _TemplateModelException(
                 _MethodUtil.invocationErrorMessageStart(member), " couldn't be called: The value of the ",
-                new _DelayedOrdinal(new Integer(argIdx + 1)),
+                new _DelayedOrdinal(Integer.valueOf(argIdx + 1)),
                 " argument was null, but the target Java parameter type (", ClassUtil.getShortClassName(targetType),
-                ") is primitive and so can't store null." });
+                ") is primitive and so can't store null.");
     }
     
     protected Member getMember() {
