@@ -24,19 +24,16 @@ import java.util.List;
 
 /**
  */
-public class OptimizerUtil
-{
+public class OptimizerUtil {
     private static final BigInteger INTEGER_MIN = new BigInteger(Integer.toString(Integer.MIN_VALUE));
     private static final BigInteger INTEGER_MAX = new BigInteger(Integer.toString(Integer.MAX_VALUE));
     private static final BigInteger LONG_MIN = new BigInteger(Long.toString(Long.MIN_VALUE));
     private static final BigInteger LONG_MAX = new BigInteger(Long.toString(Long.MAX_VALUE));
 
-    private OptimizerUtil()
-    {
+    private OptimizerUtil() {
     }
     
-    public static List optimizeListStorage(List list)
-    {
+    public static List optimizeListStorage(List list) {
         switch(list.size())
         {
             case 0:
@@ -49,9 +46,8 @@ public class OptimizerUtil
             }
             default:
             {
-                if(list instanceof ArrayList)
-                {
-                    ((ArrayList)list).trimToSize();
+                if (list instanceof ArrayList) {
+                    ((ArrayList) list).trimToSize();
                 }
                 return list;
             }
@@ -68,38 +64,29 @@ public class OptimizerUtil
      * original number type, we have no other choice to ensure expected operation
      * in majority of cases.
      */
-    public static Number optimizeNumberRepresentation(Number number)
-    {
-        if(number instanceof BigDecimal)
-        {
+    public static Number optimizeNumberRepresentation(Number number) {
+        if (number instanceof BigDecimal) {
             BigDecimal bd = (BigDecimal) number;
-            if(bd.scale() == 0)
-            {
+            if (bd.scale() == 0) {
                 // BigDecimal -> BigInteger
                 number = bd.unscaledValue();
-            }
-            else
-            {
+            } else {
                 double d = bd.doubleValue();
-                if(d != Double.POSITIVE_INFINITY && d != Double.NEGATIVE_INFINITY)
-                {
+                if (d != Double.POSITIVE_INFINITY && d != Double.NEGATIVE_INFINITY) {
                     // BigDecimal -> Double
-                    return new Double(d);
+                    return Double.valueOf(d);
                 }
             }
         }
-        if(number instanceof BigInteger)
-        {
-            BigInteger bi = (BigInteger)number;
-            if(bi.compareTo(INTEGER_MAX) <= 0 && bi.compareTo(INTEGER_MIN) >= 0)
-            {
+        if (number instanceof BigInteger) {
+            BigInteger bi = (BigInteger) number;
+            if (bi.compareTo(INTEGER_MAX) <= 0 && bi.compareTo(INTEGER_MIN) >= 0) {
                 // BigInteger -> Integer
-                return new Integer(bi.intValue());
+                return Integer.valueOf(bi.intValue());
             }
-            if(bi.compareTo(LONG_MAX) <= 0 && bi.compareTo(LONG_MIN) >= 0)
-            {
+            if (bi.compareTo(LONG_MAX) <= 0 && bi.compareTo(LONG_MIN) >= 0) {
                 // BigInteger -> Long
-                return new Long(bi.longValue());
+                return Long.valueOf(bi.longValue());
             }
         }
         return number;
